--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <script src="https://cdn.jsdelivr.net/npm/leaflet@1.9.4/dist/leaflet.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/proj4@2.11.0/dist/proj4.min.js"></script>
-        <script src="http://unpkg.com/tone"></script>
+        <script src="https://unpkg.com/tone"></script>
         <script src="https://cdn.tailwindcss.com"></script>
         <script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
     </head>
